--- a/src/app/home/pages/home/home.component.scss
+++ b/src/app/home/pages/home/home.component.scss
@@ -1,20 +1,36 @@
 .sensors-home {
-    direction: rtl;
+  direction: rtl;
 
-    .sensors-home-header {
-        font-weight: bold;
-        margin-top: 3rem;
-    }
+  .sensors-home-header {
+    font-weight: bold;
+    margin-top: 3rem;
+  }
 
-    .sensor-item{
-        padding: 1rem;
-        width: 100%;
-        height: 100%;
-    }
+  .sensor-item {
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+  }
 
-    .button-holder{
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        text-align: center;
-    }
+  .button-holder {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    text-align: center;
+  }
+
+  .align-end {
+    place-self: end;
+  }
+
+  .left-button {
+    text-align: left;
+  }
+
+  .left-button button {
+    margin-left: 1rem;
+  }
+
+  .span-align-end {
+    margin-right: 1rem;
+  }
 }
